refactor: comentarios do editorconfig removidos, adicionado a variavel de ambiente no .env e modificado o script de test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto Trybe",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest --coverage --forceExit --runInBand --noStackTrace",
     "test:coverage": "NODE_ENV=test jest --coverage --forceExit --runInBand --noStackTrace",
     "dev": "nodemon src/main/server.js"
   },
