--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto Trybe",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --coverage --forceExit --runInBand --noStackTrace",
+    "test": "NODE_ENV=test jest --forceExit --runInBand --noStackTrace",
     "test:coverage": "NODE_ENV=test jest --coverage --forceExit --runInBand --noStackTrace",
     "dev": "nodemon src/main/server.js"
   },
