install: adicionado sinon para criar os stubs das funçoes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "sinon": "^13.0.1",
     "supertest": "^6.2.2"
   },
   "dependencies": {
