--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest --forceExit --runInBand --noStackTrace",
+    "test:unit": "NODE_ENV=test jest unit --forceExit --runInBand --noStackTrace",
+    "test:integration": "NODE_ENV=test jest integration --forceExit --runInBand --noStackTrace",
     "test:coverage": "NODE_ENV=test jest --coverage --forceExit --runInBand --noStackTrace",
     "dev": "nodemon src/main/server.js"
   },
