--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Projeto Trybe",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --forceExit --runInBand --noStackTrace",
-    "test:unit": "NODE_ENV=test jest unit --forceExit --runInBand --noStackTrace",
-    "test:integration": "NODE_ENV=test jest integration --forceExit --runInBand --noStackTrace",
-    "test:coverage": "NODE_ENV=test jest --coverage --forceExit --runInBand --noStackTrace",
+    "test": "jest --forceExit --runInBand",
+    "test:unit": "jest unit --forceExit --runInBand",
+    "test:integration": "jest integration --forceExit --runInBand",
+    "test:coverage": "jest --coverage --forceExit --runInBand",
     "dev": "nodemon src/main/server.js"
   },
   "keywords": [],
